# tauri_snake_game

./: README.md  package-lock.json  package.json
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/game_core/: game.rs
src/i18n/: index.js
