[package]
name = "snake"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "snake_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"

[profile.release]
opt-level = 'z'     # 优化大小
lto = true          # 链接时优化
codegen-units = 1   # 更好的优化，但编译更慢
panic = 'abort'     # 移除 panic 相关代码
strip = true        # 移除符号信息

